simplifying swagger init

--- a/public/swagger.html
+++ b/public/swagger.html
@@ -6,9 +6,9 @@
     <title>Swagger UI</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Source+Code+Pro:300,600|Titillium+Web:400,600,700"
           rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="/api-docs/swagger/assets/swagger-ui.css">
-    <link rel="icon" type="image/png" href="/api-docs/swagger/assets/favicon-32x32.png" sizes="32x32"/>
-    <link rel="icon" type="image/png" href="/api-docs/swagger/assets/favicon-16x16.png" sizes="16x16"/>
+    <link rel="stylesheet" type="text/css" href="/api/v1/docs/swagger/assets/swagger-ui.css">
+    <link rel="icon" type="image/png" href="/api/v1/docs/swagger/assets/favicon-32x32.png" sizes="32x32"/>
+    <link rel="icon" type="image/png" href="/api/v1/docs/swagger/assets/favicon-16x16.png" sizes="16x16"/>
     <style>
         html {
             box-sizing: border-box;
@@ -68,14 +68,14 @@
 
 <div id="swagger-ui"></div>
 
-<script src="/api-docs/swagger/assets/swagger-ui-bundle.js"></script>
-<script src="/api-docs/swagger/assets/swagger-ui-standalone-preset.js"></script>
+<script src="/api/v1/docs/swagger/assets/swagger-ui-bundle.js"></script>
+<script src="/api/v1/docs/swagger/assets/swagger-ui-standalone-preset.js"></script>
 <script>
     window.onload = function () {
 
         // Build a system
         const ui = SwaggerUIBundle ({
-            url: "/api-docs/swagger.json",
+            url: "/api/v1/docs/swagger.json",
             dom_id: '#swagger-ui',
             deepLinking: true,
             presets: [
